--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1202,7 +1202,7 @@ TODO:
 % 	\textit{cargo-semver-checks} (2023) \\
 % 	\url{https://github.com/obi1kenobi/cargo-semver-checks}
 
-%%% section 5.5 link
+%%% section 5.2 links
 
 \bibitem{issue-rustdoc-our-tests} GitHub,
 	\textit{Rust -- Issue \#110815} (2023) \\
