--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -733,7 +733,7 @@ a Rust sourcecode that can be compiled in two ways (which produces
 \say{current} and \say{baseline} codes) and a file containing the Trustfall query results
 for this sourcecode and lint.
 We have replaced this system with a new one that contains numerous \say{crate pairs}
-(two separate directories called \say{current} and \say{baseline} crates with their own
+(two separate directories called \say{current} and \say{baseline} with their own
 manifests and source codes) and Trustfall query results for each lint over all of the
 available crate pairs. This has brought numerous benefits:
 \begin{itemize}
