--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -734,7 +734,7 @@ a Rust sourcecode that can be compiled in two ways (which produces
 for this sourcecode and lint.
 We have replaced this system with a new one that contains numerous \say{crate pairs}
 (two separate directories called \say{current} and \say{baseline} with their own
-manifests and source codes) and Trustfall query results for each lint over all of the
+manifests and source codes) and Trustfall query results for each lint over all
 available crate pairs. This has brought numerous benefits:
 \begin{itemize}
 	\item because each lint is now checked on all the crate pairs,
