--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -742,7 +742,7 @@ available crate pairs. This has brought numerous benefits:
 		(e.g. a similar error was reported by two different lints
 		when it should have been reported by only one of them),
 	\item the manifests of the baseline and current crates can be different,
-		which will allow writing tests for lints checking the manifests
+		which allows to write tests for lints checking the manifests
 		(such lints are not yet implemented, but it is one of the future goals
 		of the project),
 	\item the tests became much more readable, which helped us to catch some bugs
