--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -766,7 +766,7 @@ runs the tool just like the user did to trigger the bug
 and checks that the bug is no longer present.
 Thanks to that, we can be sure that the user that reported the bug
 won't experience this bug ever again.
-Just writing that kind of tests helped us in catching other bugs
+Just the writing of such tests helped us find other bugs
 -- we tried to write tests that run the tool in different ways
 with different commandline arguments and the tool was wrongly handling some arguments.
 
