--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -728,10 +728,12 @@ TODO:
 
 \section{Better test suite with integration tests}\label{r:section_test_suite}
 
-Before our contributions, each lint had its own testcase consisting of
-a Rust sourcecode that can be compiled in two ways (which produces
-\say{current} and \say{baseline} codes) and a file containing the Trustfall query results
-for this sourcecode and lint.
+Before our contributions, each lint had its own, dedicated testcase consisting of:
+\begin{itemize}
+\item the Rust sourcecode that could be compiled in two different ways (producing
+\say{current} and \say{baseline} codes),
+\item a file with the results of executing its Trustfall query over this sourcecode.
+\end{itemize}
 We have replaced this system with a new one that contains numerous \say{crate pairs}
 (two separate directories called \say{current} and \say{baseline} with their own
 manifests and source codes) and Trustfall query results for each lint over all
