--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -764,7 +764,7 @@ We also wrote a new kind of tests to ensure that some bugs found by us or report
 Such tests were made by writing a GitHub workflow job (which triggers on each
 commit and Pull Request) that downloads the tool and the user's git repository,
 runs the tool just like the user did to trigger the bug
-and checks that the bug is no longer present.
+and checks that it is no longer present.
 Thanks to that, we can be sure that the user that reported the bug
 won't experience this bug ever again.
 Just the writing of such tests helped us find other bugs
