--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -765,8 +765,8 @@ Such tests were made by writing a GitHub workflow job (which triggers on each
 commit and Pull Request) that downloads the tool and the user's git repository,
 runs the tool just like the user did to trigger the bug
 and checks that it is no longer present.
-Thanks to that, we can be sure that the user that reported the bug
-won't experience this bug ever again.
+Thanks to this, we can be sure that the user who reported the bug
+will not experience it ever again.
 Just the writing of such tests helped us find other bugs
 -- we tried to write tests that run the tool in different ways
 with different commandline arguments and the tool was wrongly handling some arguments.
