--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -775,8 +775,7 @@ While those integration tests were more appropriate to be written as a GitHub wo
 (simply because cloning the user's git repo takes time and requires internet connection,
 thus the tests are not suitable to be run locally),
 we also had integration tests that we wanted to run locally, alongside the crate pair tests.
-For example, we had a bug where our work on developing the crate pair tests somehow
-stopped including the lints in the produced binary (and that bug almost went to production).
+For example, there was a bug where the crate pair tests did not include the lints in the produced binary (which fortunately was noticed before going to production).
 To be sure that this will not happen again, we wrote an integration test that
 locally executes the produced binary and verifies its output.
 
