--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -769,7 +769,7 @@ Thanks to this, we can be sure that the user who reported the bug
 will not experience it ever again.
 Just the writing of such tests helped us find other bugs
 -- we tried to write tests that run the tool in different ways
-with different commandline arguments and the tool was wrongly handling some arguments.
+with various commandline arguments and they detected that it wrongly handled some arguments.
 
 While those integration tests were more appropriate to be written as a GitHub workflow job
 (simply because cloning the user's git repo takes time and requires internet connection,
