--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -725,7 +725,7 @@ The differences between the V1 and V2 of the action are further discussed in sec
 
 <Here write a list about changes that made the command line interface better>
 
-\section{A new GitHub Action for the users}\label{r:section_continuous_integration_improvements}
+\section{Brand new GitHub Action}\label{r:section_continuous_integration_improvements}
 
 <Here write a list about the V2 of the continuous integration>
 
