--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -717,7 +717,7 @@ The differences between the V1 and V2 of the action are further discussed in sec
 
 \chapter{Implementation}\label{r:chapter_implementation}
 
-\section{More lints that check for semver breaks}\label{r:section_new_lints}
+\section{The lint set expansion}\label{r:section_new_lints}
 
 <Here write a list about the new lints we've written>
 
