--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -748,7 +748,7 @@ TODO:
 
 
 % chapter semver-crater
-\chapter{Tool's results on popular crates}\label{r:results_popular_crates}
+\chapter{Tool's findings in popular crates}\label{r:results_popular_crates}
 
 \section{Statistics of found true-positives and bugs}\label{r:witness_generation}
 
