--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -750,7 +750,7 @@ TODO:
 % chapter semver-crater
 \chapter{Tool's findings in popular crates}\label{r:results_popular_crates}
 
-\section{Statistics of found true-positives and bugs}\label{r:witness_generation}
+\section{Statistics on true-positives and bugs}\label{r:witness_generation}
 
 \section{The process of gathering results -- semver-crater}\label{r:intro_semver_crater}
 
