--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -754,7 +754,7 @@ TODO:
 
 \section{The process of gathering results -- semver-crater}\label{r:intro_semver_crater}
 
-\section{Witness generation}\label{r:witness_generation}
+\section{Generating witnesses}\label{r:witness_generation}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
