--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -752,7 +752,7 @@ TODO:
 
 \section{Statistics on true-positives and bugs}\label{r:witness_generation}
 
-\section{The process of gathering results -- semver-crater}\label{r:intro_semver_crater}
+\section{The process of gathering results (semver-crater)}\label{r:intro_semver_crater}
 
 \section{Generating witnesses}\label{r:witness_generation}
 
