Tiny label corrections.

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -725,7 +725,7 @@ The differences between the V1 and V2 of the action are further discussed in sec
 
 <Here write a list about changes that made the command line interface better>
 
-\section{Brand new GitHub Action}\label{r:section_continuous_integration_improvements}
+\section{Brand new GitHub Action}\label{r:section_github_action}
 
 <Here write a list about the V2 of the continuous integration>
 
@@ -748,13 +748,13 @@ TODO:
 
 
 % chapter semver-crater
-\chapter{Tool's findings in popular crates}\label{r:results_popular_crates}
+\chapter{Tool's findings in popular crates}\label{r:chapter_results_popular_crates}
 
-\section{Statistics on true-positives and bugs}\label{r:witness_generation}
+\section{Statistics on true-positives and bugs}\label{r:section_results_statistics}
 
-\section{The process of gathering results (semver-crater)}\label{r:intro_semver_crater}
+\section{The process of gathering results (semver-crater)}\label{r:section_results_semver_crater}
 
-\section{Generating witnesses}\label{r:witness_generation}
+\section{Generating witnesses}\label{r:section_generating_witnesses}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -979,14 +979,14 @@ and immediate contact with him through chat).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Conclusion}\label{r:chapter_conclusion}
 
-\section{The significance of our contributions}\label{r:section_conclusion}
+\section{The significance of our contributions}\label{r:section_significance_of_contributions}
 
 TODO:
 \begin{itemize}
 	\item write a conclusion
 \end{itemize}
 
-\section{Rust community's positive response to the tool}\label{r:section_popularity_increase}
+\section{Rust community's positive response to the tool}\label{r:section_community_response}
 
 TODO:
 \begin{itemize}
