--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -753,7 +753,7 @@ TODO:
 \section{Statistics on found true-positives}\label{r:section_results_statistics}
 
 Thanks to cargo-semver-checks, we were able to find numerous true-positives
-amongst the top 1000 most downloaded Rust crates.
+amongst the one thousand most downloaded Rust crates.
 This section shows the results we found and the next section \ref{r:intro_semver_crater}
 describes how we managed to get those results.
 
