--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -754,8 +754,8 @@ TODO:
 
 Thanks to cargo-semver-checks, we were able to find numerous true-positives
 amongst the one thousand most downloaded Rust crates.
-This section shows the results we found and the next section \ref{r:intro_semver_crater}
-describes how we managed to get those results.
+This section presents the results we got and the following one (\ref{r:section_generating_witnesses})
+describes how we managed to obtain them.
 
 TODO: calculate Xi constants.
 
