--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -764,7 +764,7 @@ that were made later than XX-XX-XXXX, where X1 of them don't compile anymore on 
 and X2 of the remaining ones are are yanked.
 
 From the X3 non-yanked releases which we were able to compile,
-\textbf{in X4 of them we found at least one semver break}.
+\textbf{in X4 of them we found one or more semver breaks}.
 In total, X5 times a lint was triggered (multiple lints can be triggered on one release
 and each triggered lint reports multiple items in the sourcecode that broke semver)
 and X6 times an item was reported.
