--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -765,9 +765,7 @@ and X2 of the remaining ones are are yanked.
 
 From the X3 non-yanked releases which we were able to compile,
 \textbf{in X4 of them we found one or more semver breaks}.
-In total, X5 times a lint was triggered (multiple lints can be triggered on one release
-and each triggered lint reports multiple items in the sourcecode that broke semver)
-and X6 times an item was reported.
+In total, different lints were triggered X5 times with X6 items reported (one release can trigger multiple lints, each of them reporting multiple items in the sourcecode that broke semver).
 
 For each true-positive we constructed a \texttt{witness} -- a short Rust code
 that shows that a particular item indeed breaks server,
