--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -835,7 +835,7 @@ We came up with two solutions:
 \end{itemize}
 
 Those two techniques greatly reduced the number of reports.
-To be sure that the remaining found items were true-positives,
+To be sure that the remaining reported items were true-positives,
 we manually looked at the code (we managed to generate links to the line of code where an item was defined).
 Mostly we checked whether an item was indeed a part of the public API,
 (that it is not under a \say{doc hidden} and it is not a part of a testing module).
