--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -836,7 +836,7 @@ We came up with two solutions:
 
 Those two techniques greatly reduced the number of reports.
 To be sure that the remaining reported items were true-positives,
-we manually looked at the code (we managed to generate links to the line of code where an item was defined).
+we manually checked the code (we managed to generate links to the line of code where each item was defined).
 Mostly we checked whether an item was indeed a part of the public API,
 (that it is not under a \say{doc hidden} and it is not a part of a testing module).
 Thanks to that, we have high confidence that the found items are indeed true-positives.
