--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -775,7 +775,7 @@ Moreover, for each result we have viewed its sourcecode to confirm
 that it is part of the public API accessible by the user. Thus, we are confident that each
 result is a real true-positive.
 
-The following table shows in how many releases each lint was triggered
+The following table shows for each lint in how many releases it was triggered
 and how many items in total it has reported:
 
 X7-table
