--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -782,7 +782,7 @@ X7-table
 
 X8-explain-implications
 
-All of the found true-positives (with the witnesses) can be found in a GitHub repository [X10]
+All of the detected true-positives (with their witnesses) can be found in a GitHub repository [X10]
 in both human-readable and machine-readable form.
 All of the results (both true-positives and false-positives / bugs) are provided
 in a human-readable form.
