--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -793,7 +793,7 @@ Because cargo-semver-checks is already able to create a rustdoc
 from the registry for a particular crate and version,
 we thought of running the tool on a large number of existing crates
 to find true-positives and bugs (which mostly are false-positives or crashes).
-We wrote this kind of tool and called it \texttt{semver-crater}
+We developed a tool for this purpose and called it \texttt{semver-crater}
 (similarly to \texttt{crater} that is being used by the Rust team to check
 new compilator versions on a large number of crates).
 
