--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -797,7 +797,7 @@ We developed a tool for this purpose and called it \texttt{semver-crater}
 (similarly to \texttt{crater} that is being used by the Rust team to check
 new compilator versions on a large number of crates).
 
-It fetches a list of 1000 crates available on crates.io, sorted by the number of
+It fetches a list of one thousand crates available on crates.io, sorted by the number of
 all-time downloads (thus, they are often the biggest crates and libraries
 that strictly adhere to semantic versioning). For each crate,
 it then retrieves the available version which weren't yanked
