--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -816,8 +816,8 @@ Unfortunately, cargo-semver-checks is not yet perfect and sometimes produces fal
 		(thus the item is still available with the old path,
 		but it's definition is in another rustdoc, so it's not visible to cargo-semver-checks).
 \end{itemize}
-Other false-positives also happened, but they showed up rarely and primarely
-were just a bug in the lint query.
+Other false-positives also happened, but they showed up rarely and primarily
+were just caused by a bug in the lint query.
 
 Fixing those two false-positives isn't easy, so we shifted our focus
 on finding ways to detect when one of those two false-positives happened.
