--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -794,7 +794,7 @@ from the registry for a particular crate and version,
 we thought of running the tool on a large number of existing crates
 to find true-positives and bugs (which mostly are false-positives or crashes).
 We developed a tool for this purpose and called it \texttt{semver-crater}
-(similarly to \texttt{crater} that is being used by the Rust team to check
+(similarly to \texttt{crater} which is used by the Rust team to check
 new compilator versions on a large number of crates).
 
 It fetches a list of one thousand crates available on crates.io, sorted by the number of
