--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -789,8 +789,8 @@ in a human-readable form.
 
 \section{Generating witnesses}\label{r:section_generating_witnesses}
 
-Because cargo-semver-checks is already able to create a rustdoc
-from the registry for a particular crate and version,
+Because cargo-semver-checks is able to create a rustdoc
+from the registry of a particular crate and version,
 we thought of running the tool on a large number of existing crates
 to find true-positives and bugs (which mostly are false-positives or crashes).
 We developed a tool for this purpose and called it \texttt{semver-crater}
