--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -819,8 +819,8 @@ Unfortunately, cargo-semver-checks is not yet perfect and sometimes produces fal
 Other false-positives also happened, but they showed up rarely and primarily
 were just caused by a bug in the lint query.
 
-Fixing those two false-positives isn't easy, so we shifted our focus
-on finding ways to detect when one of those two false-positives happened.
+Because fixing the two main false-positives turned out to be difficult, we instead shifted our focus
+to finding ways for detecting when one of them happened.
 We came up with two solutions:
 \begin{itemize}
 	\item To detect most of the \say{doc hidden} false-positives
